AC_INIT(src/main.c)
AM_INIT_AUTOMAKE(isatapd, 0.9.7)

AM_CONFIG_HEADER([config.h])

AC_PROG_INSTALL

AC_HEADER_STDC

AC_CHECK_HEADERS([net/if.h netdb.h arpa/inet.h netinet/ip.h netinet/icmp6.h linux/socket.h sys/utsname.h])
AC_CHECK_HEADERS([getopt.h])

AC_TYPE_PID_T
AC_FUNC_MALLOC

AC_CHECK_FUNCS([ioctl getopt_long syslog fcntl])

AC_MSG_CHECKING(if 1=2)
AC_MSG_RESULT(no)

AC_CONFIG_FILES([Makefile src/Makefile man/Makefile])
AC_OUTPUT

